syntax = "proto3";
package  tv.uob.grpc;

option java_multiple_files = true;
option java_package = "tv.uob.grpc";

message UserId {
    string value = 1;
}
